--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# folder public/ sebagai vendor (tidak dihitung bahasa)
+public/* linguist-vendored
+
+# template HTML massal
+templates/* linguist-vendored
+*.css linguist-vendored
+*.js linguist-vendored
