--- a/.gitattributes
+++ b/.gitattributes
@@ -3,5 +3,6 @@ public/* linguist-vendored
 
 # template HTML massal
 templates/* linguist-vendored
+*.php linguist-vendored
 *.css linguist-vendored
 *.js linguist-vendored
